--- a/src/scss/bundle.scss
+++ b/src/scss/bundle.scss
@@ -1,3 +1,6 @@
+@import "compass/css3/images";
+@import "compass/css3/transform";
+
 @import "style-guide/src/scss/style-guide";
 @import "modal-mask";
 
