--- a/src/scss/_modal-mask.scss
+++ b/src/scss/_modal-mask.scss
@@ -1,3 +1,6 @@
+@import "compass/css3/images";
+@import "compass/css3/transform";
+
 @mixin modal-mask {
     .modal-mask {
         position: fixed;
