--- a/src/scss/_modal-mask.scss
+++ b/src/scss/_modal-mask.scss
@@ -1,6 +1,3 @@
-@import "compass/css3/images";
-@import "compass/css3/transform";
-
 @mixin modal-mask {
     .modal-mask {
         position: fixed;
@@ -8,13 +5,14 @@
         left: 0px;
         width: 100%;
         height: 100%;
-        background: black;
-        @include transform(translate3d(0, 0, 0));
-        @include background(radial-gradient(rgba($blue-gray-xdark, 0.3), rgba($blue-gray-xdark, 0.725)));
+        transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+        background-image: radial-gradient(rgba($blue-gray-xdark, 0.3), rgba($blue-gray-xdark, 0.725));
         opacity: 0;
 
         &.modal-mask-animated {
-            @include transition(opacity 0.25s linear);
+            transition: opacity 0.25s linear;
+            -webkit-transition: opacity 0.25s linear;
         }
 
         &.visible {
@@ -23,6 +21,7 @@
     }
 
     .modal-mask-blur {
-        @include transform(translateZ(0));
+        transform: translateZ(0);
+        -webkit-transform: translateZ(0);
     }
 }
